--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ Umar Khan
 </head>
 <body>
 <h1 align="center">
-Umar Khan (Web Developer)
+  Hello World!,
+My name is Umar Khan and I am a  Web Developer
 </h1>
   <h3>Delhi, India</h3>
 </body>
